# torch_sparse_autoencoder

./: README.md  setup.cfg
src/torch_sparse_autoencoder/: core.py
