[metadata]
name = torch_sparse_autoencoder
version = 0.1.0
author = Shiv Bhatia
author_email = shivbhatia10@gmail.com
description = A sparse autoencoder implementation in Python for the PyTorch library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/sparse_autoencoder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent